First experiments with RoBerta

--- a/kaggle/text-classification/data/Format Datasets.ipynb
+++ b/kaggle/text-classification/data/Format Datasets.ipynb
@@ -595,7 +595,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
+   "id": "recognized-carol",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'ablaze', 'accident', 'aftershock', 'airplane%20accident',\n",
+       "       'ambulance', 'annihilated', 'annihilation', 'apocalypse',\n",
+       "       'armageddon', 'army', 'arson', 'arsonist', 'attack', 'attacked',\n",
+       "       'avalanche', 'battle', 'bioterror', 'bioterrorism', 'blaze',\n",
+       "       'blazing', 'bleeding', 'blew%20up', 'blight', 'blizzard', 'blood',\n",
+       "       'bloody', 'blown%20up', 'body%20bag', 'body%20bagging',\n",
+       "       'body%20bags', 'bomb', 'bombed', 'bombing', 'bridge%20collapse',\n",
+       "       'buildings%20burning', 'buildings%20on%20fire', 'burned',\n",
+       "       'burning', 'burning%20buildings', 'bush%20fires', 'casualties',\n",
+       "       'casualty', 'catastrophe', 'catastrophic', 'chemical%20emergency',\n",
+       "       'cliff%20fall', 'collapse', 'collapsed', 'collide', 'collided',\n",
+       "       'collision', 'crash', 'crashed', 'crush', 'crushed', 'curfew',\n",
+       "       'cyclone', 'damage', 'danger', 'dead', 'death', 'deaths', 'debris',\n",
+       "       'deluge', 'deluged', 'demolish', 'demolished', 'demolition',\n",
+       "       'derail', 'derailed', 'derailment', 'desolate', 'desolation',\n",
+       "       'destroy', 'destroyed', 'destruction', 'detonate', 'detonation',\n",
+       "       'devastated', 'devastation', 'disaster', 'displaced', 'drought',\n",
+       "       'drown', 'drowned', 'drowning', 'dust%20storm', 'earthquake',\n",
+       "       'electrocute', 'electrocuted', 'emergency', 'emergency%20plan',\n",
+       "       'emergency%20services', 'engulfed', 'epicentre', 'evacuate',\n",
+       "       'evacuated', 'evacuation', 'explode', 'exploded', 'explosion',\n",
+       "       'eyewitness', 'famine', 'fatal', 'fatalities', 'fatality', 'fear',\n",
+       "       'fire', 'fire%20truck', 'first%20responders', 'flames',\n",
+       "       'flattened', 'flood', 'flooding', 'floods', 'forest%20fire',\n",
+       "       'forest%20fires', 'hail', 'hailstorm', 'harm', 'hazard',\n",
+       "       'hazardous', 'heat%20wave', 'hellfire', 'hijack', 'hijacker',\n",
+       "       'hijacking', 'hostage', 'hostages', 'hurricane', 'injured',\n",
+       "       'injuries', 'injury', 'inundated', 'inundation', 'landslide',\n",
+       "       'lava', 'lightning', 'loud%20bang', 'mass%20murder',\n",
+       "       'mass%20murderer', 'massacre', 'mayhem', 'meltdown', 'military',\n",
+       "       'mudslide', 'natural%20disaster', 'nuclear%20disaster',\n",
+       "       'nuclear%20reactor', 'obliterate', 'obliterated', 'obliteration',\n",
+       "       'oil%20spill', 'outbreak', 'pandemonium', 'panic', 'panicking',\n",
+       "       'police', 'quarantine', 'quarantined', 'radiation%20emergency',\n",
+       "       'rainstorm', 'razed', 'refugees', 'rescue', 'rescued', 'rescuers',\n",
+       "       'riot', 'rioting', 'rubble', 'ruin', 'sandstorm', 'screamed',\n",
+       "       'screaming', 'screams', 'seismic', 'sinkhole', 'sinking', 'siren',\n",
+       "       'sirens', 'smoke', 'snowstorm', 'storm', 'stretcher',\n",
+       "       'structural%20failure', 'suicide%20bomb', 'suicide%20bomber',\n",
+       "       'suicide%20bombing', 'sunk', 'survive', 'survived', 'survivors',\n",
+       "       'terrorism', 'terrorist', 'threat', 'thunder', 'thunderstorm',\n",
+       "       'tornado', 'tragedy', 'trapped', 'trauma', 'traumatised',\n",
+       "       'trouble', 'tsunami', 'twister', 'typhoon', 'upheaval',\n",
+       "       'violent%20storm', 'volcano', 'war%20zone', 'weapon', 'weapons',\n",
+       "       'whirlwind', 'wild%20fires', 'wildfire', 'windstorm', 'wounded',\n",
+       "       'wounds', 'wreck', 'wreckage', 'wrecked'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['keyword'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "indian-leather",
    "metadata": {},
    "outputs": [],
@@ -604,13 +670,14 @@
     "\n",
     "def replace_fixes(text):\n",
     "    text = re.sub('http[s]?://\\S+', '(url)', text)\n",
-    "    text = re.sub('\\@\\S+', '(user)', text)\n",
+    "    text = re.sub('@\\S+', '(at)', text) \n",
+    "    text = text.replace('#', '').replace('%20', ' ')\n",
     "    return text\n",
     "\n",
     "def create_text_feature(df):\n",
     "    df = df.fillna('unknown')\n",
-    "    res = df['keyword'].apply(lambda r: f\"keyword {r}\") + \\\n",
-    "        df['text'].apply(lambda r: replace_fixes(r))\n",
+    "    res = (df['keyword'].apply(lambda r: f\"keyword {r}, \") + \\\n",
+    "        df['text']).apply(lambda r: replace_fixes(r))\n",
     "#        df['location'].apply(lambda r: f\", location {r}, \") + \\\n",
     "    return res\n",
     "\n",
@@ -626,58 +693,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "recorded-letters",
+   "execution_count": 9,
+   "id": "working-minority",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ala ma kota (url) i pójdzie do piekła @ala'"
+       "'ala ma kota (url) i pójdzie do piekła (at) wildfire airplane incident'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "remove_http('ala ma kota http://ala.ma.kota i pójdzie do piekła @ala')"
+    "replace_fixes('ala ma kota http://ala.ma.kota i pójdzie do piekła @ala, ##wildfire airplane%20incident')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "naval-athens",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                    Just happened a terrible car crash\n",
-       "1     Heard about #earthquake is different cities, s...\n",
-       "2     there is a forest fire at spot pond, geese are...\n",
-       "3              Apocalypse lighting. #Spokane #wildfires\n",
-       "4         Typhoon Soudelor kills 28 in China and Taiwan\n",
-       "5                    We're shaking...It's an earthquake\n",
-       "6     They'd probably still show more life than Arse...\n",
-       "7                                     Hey! How are you?\n",
-       "8                                      What a nice hat?\n",
-       "9                                             Fuck off!\n",
-       "10                                No I don't like cold!\n",
-       "11                           NOOOOOOOOO! Don't do that!\n",
-       "12                               No don't tell me that!\n",
-       "13                                            What if?!\n",
-       "14                                             Awesome!\n",
-       "15    Birmingham Wholesale Market is ablaze BBC News...\n",
-       "16    @sunkxssedharry will you wear shorts for race ...\n",
-       "17    #PreviouslyOnDoyinTv: Toke MakinwaÛªs marriag...\n",
-       "18       Check these out: (url) (url) (url) (url) #nsfw\n",
-       "19    PSA: IÛªm splitting my personalities.\\n\\n?? t...\n",
-       "Name: text, dtype: object"
+       "0     keyword unknown, Just happened a terrible car ...\n",
+       "1     keyword unknown, Heard about earthquake is dif...\n",
+       "2     keyword unknown, there is a forest fire at spo...\n",
+       "3     keyword unknown, Apocalypse lighting. Spokane ...\n",
+       "4     keyword unknown, Typhoon Soudelor kills 28 in ...\n",
+       "5     keyword unknown, We're shaking...It's an earth...\n",
+       "6     keyword unknown, They'd probably still show mo...\n",
+       "7                    keyword unknown, Hey! How are you?\n",
+       "8                     keyword unknown, What a nice hat?\n",
+       "9                            keyword unknown, Fuck off!\n",
+       "10               keyword unknown, No I don't like cold!\n",
+       "11          keyword unknown, NOOOOOOOOO! Don't do that!\n",
+       "12              keyword unknown, No don't tell me that!\n",
+       "13                           keyword unknown, What if?!\n",
+       "14                            keyword unknown, Awesome!\n",
+       "15    keyword ablaze, Birmingham Wholesale Market is...\n",
+       "16    keyword ablaze, (at) will you wear shorts for ...\n",
+       "17    keyword ablaze, PreviouslyOnDoyinTv: Toke Maki...\n",
+       "18    keyword ablaze, Check these out: (url) (url) (...\n",
+       "19    keyword ablaze, PSA: IÛªm splitting my person...\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "received-float",
    "metadata": {},
    "outputs": [],
@@ -700,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "amateur-aerospace",
    "metadata": {},
    "outputs": [],
@@ -711,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "portuguese-drunk",
    "metadata": {},
    "outputs": [],
@@ -721,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "floral-mandate",
    "metadata": {},
    "outputs": [],
@@ -731,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "sharp-trunk",
    "metadata": {},
    "outputs": [],
@@ -742,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "recreational-occasion",
    "metadata": {},
    "outputs": [],
@@ -752,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "forty-visit",
    "metadata": {},
    "outputs": [
@@ -773,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "welcome-southeast",
+   "id": "closed-temperature",
    "metadata": {},
    "outputs": [],
    "source": []
