Some additional results after changes in preprocessing

--- a/kaggle/text-classification/data/Format Datasets.ipynb
+++ b/kaggle/text-classification/data/Format Datasets.ipynb
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "recognized-carol",
+   "id": "simple-entrance",
    "metadata": {},
    "outputs": [
     {
@@ -667,19 +667,41 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "def clean_text(text):\n",
+    "    text = text.lower()  # lowercase\n",
+    "    text = re.sub('http[s]?://\\S+', 'url', text) # Replace URLs with a placeholder\n",
+    "    text = re.sub('@\\S+', 'person', text) # Replace person \"handles\" with a placeholder \n",
+    "    text = text.replace('#', '').replace('%20', ' ') # Remove '#' and Replace %20 with actual space\n",
     "\n",
-    "def replace_fixes(text):\n",
-    "    text = re.sub('http[s]?://\\S+', '(url)', text)\n",
-    "    text = re.sub('@\\S+', '(at)', text) \n",
-    "    text = text.replace('#', '').replace('%20', ' ')\n",
+    "    # Some additional \"borrowed\" preprocessing steps\n",
+    "    #text = re.sub(r'[!]+', '!', text)\n",
+    "    #text = re.sub(r'[?]+', '?', text)\n",
+    "    #text = re.sub(r'[.]+', '.', text)\n",
+    "    #text = re.sub(r\"'\", \"\", text)\n",
+    "    text = re.sub('\\s+', ' ', text).strip()  # Remove and double spaces\n",
+    "    text = re.sub(r'&amp;?', r'and', text)  # replace & -> and\n",
+    "#    text = re.sub(r\"https?:\\/\\/t.co\\/[A-Za-z0-9]+\", \"\", text)  # Remove URLs\n",
+    "    # remove some puncts (except . ! # ?)\n",
+    "    #text = re.sub(r'[:\"$%&\\*+,-/:;<=>@\\\\^_`{|}~]+', '', text)\n",
+    "    emoji_pattern = re.compile(\"[\"\n",
+    "                               u\"\\U0001F600-\\U0001F64F\"  # emoticons\n",
+    "                               u\"\\U0001F300-\\U0001F5FF\"  # symbols & pictographs\n",
+    "                               u\"\\U0001F680-\\U0001F6FF\"  # transport & map symbols\n",
+    "                               u\"\\U0001F1E0-\\U0001F1FF\"  # flags (iOS)\n",
+    "                               u\"\\U00002702-\\U000027B0\"\n",
+    "                               u\"\\U000024C2-\\U0001F251\"\n",
+    "                               \"]+\", flags=re.UNICODE)\n",
+    "    text = emoji_pattern.sub(r'EMOJI', text)\n",
     "    return text\n",
-    "\n",
+    "    \n",
     "def create_text_feature(df):\n",
-    "    df = df.fillna('unknown')\n",
-    "    res = (df['keyword'].apply(lambda r: f\"keyword {r}, \") + \\\n",
-    "        df['text']).apply(lambda r: replace_fixes(r))\n",
+    "    df = df.fillna('(none)')\n",
+    "    res_column =  (df['keyword'].apply(lambda t: f\"{t}! \" if t != '(none)' else '') + df['text']) \\\n",
+    "        .apply(lambda t: clean_text(t))\n",
+    "    return res_column\n",
+    "\n",
+    "# I don't include location anymore - it should not have any impact on the results\n",
     "#        df['location'].apply(lambda r: f\", location {r}, \") + \\\n",
-    "    return res\n",
     "\n",
     "# ORYGINAL VERSION:\n",
     "#def create_text_feature(df):\n",
@@ -688,19 +710,25 @@
     "#        df['location'].apply(lambda r: f\", location: [{r}], \") + \\\n",
     "#        df['text']\n",
     "#    return res\n",
-    "\n"
+    "\n",
+    "# BETTER VERSION:\n",
+    "#def replace_fixes(text):\n",
+    "#    text = re.sub('http[s]?://\\S+', '(url)', text)\n",
+    "#    text = re.sub('@\\S+', '(at)', text) \n",
+    "#    text = text.replace('#', '').replace('%20', ' ')\n",
+    "#    return text\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "working-minority",
+   "id": "hazardous-robertson",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ala ma kota (url) i pójdzie do piekła (at) wildfire airplane incident'"
+       "'ala ma kota url i pójdzie do piekła person wildfire airplane incident'"
       ]
      },
      "execution_count": 9,
@@ -709,7 +737,7 @@
     }
    ],
    "source": [
-    "replace_fixes('ala ma kota http://ala.ma.kota i pójdzie do piekła @ala, ##wildfire airplane%20incident')"
+    "clean_text('ala ma kota http://ala.ma.kota i pójdzie do piekła @ala, ##wildfire airplane%20incident')"
    ]
   },
   {
@@ -721,26 +749,26 @@
     {
      "data": {
       "text/plain": [
-       "0     keyword unknown, Just happened a terrible car ...\n",
-       "1     keyword unknown, Heard about earthquake is dif...\n",
-       "2     keyword unknown, there is a forest fire at spo...\n",
-       "3     keyword unknown, Apocalypse lighting. Spokane ...\n",
-       "4     keyword unknown, Typhoon Soudelor kills 28 in ...\n",
-       "5     keyword unknown, We're shaking...It's an earth...\n",
-       "6     keyword unknown, They'd probably still show mo...\n",
-       "7                    keyword unknown, Hey! How are you?\n",
-       "8                     keyword unknown, What a nice hat?\n",
-       "9                            keyword unknown, Fuck off!\n",
-       "10               keyword unknown, No I don't like cold!\n",
-       "11          keyword unknown, NOOOOOOOOO! Don't do that!\n",
-       "12              keyword unknown, No don't tell me that!\n",
-       "13                           keyword unknown, What if?!\n",
-       "14                            keyword unknown, Awesome!\n",
-       "15    keyword ablaze, Birmingham Wholesale Market is...\n",
-       "16    keyword ablaze, (at) will you wear shorts for ...\n",
-       "17    keyword ablaze, PreviouslyOnDoyinTv: Toke Maki...\n",
-       "18    keyword ablaze, Check these out: (url) (url) (...\n",
-       "19    keyword ablaze, PSA: IÛªm splitting my person...\n",
+       "0                    just happened a terrible car crash\n",
+       "1     heard about earthquake is different cities, st...\n",
+       "2     there is a forest fire at spot pond, geese are...\n",
+       "3                apocalypse lighting. spokane wildfires\n",
+       "4         typhoon soudelor kills 28 in china and taiwan\n",
+       "5                    we're shaking...it's an earthquake\n",
+       "6     they'd probably still show more life than arse...\n",
+       "7                                     hey! how are you?\n",
+       "8                                      what a nice hat?\n",
+       "9                                             fuck off!\n",
+       "10                                no i don't like cold!\n",
+       "11                           nooooooooo! don't do that!\n",
+       "12                               no don't tell me that!\n",
+       "13                                            what if?!\n",
+       "14                                             awesome!\n",
+       "15    ablaze! birmingham wholesale market is ablaze ...\n",
+       "16    ablaze! person will you wear shorts for race a...\n",
+       "17    ablaze! previouslyondoyintv: toke makinwaûªs ...\n",
+       "18        ablaze! check these out: url url url url nsfw\n",
+       "19    ablaze! psa: iûªm splitting my personalities....\n",
        "dtype: object"
       ]
      },
@@ -760,8 +788,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.fillna('unknown', inplace=True)\n",
     "train_df['all_text'] = create_text_feature(train_df)\n",
+    "train_df.fillna('', inplace=True) # To replace NA in other columns than text...\n",
     "train_df['target'] = train_df['target'].apply(lambda v: str(v))"
    ]
   },
@@ -772,13 +800,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_val_df = train_df.sample(n=256, random_state=101)\n",
-    "train_tra_df = train_df[~train_df.isin(train_val_df)].dropna()"
+    "train_dev_df = train_df.sample(n=256, random_state=101)\n",
+    "train_tra_df = train_df[~train_df.isin(train_dev_df)].dropna()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "controversial-eligibility",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows: 7613, total split: 7613\n",
+      "Train rows: 7357, dev: 256\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total rows: {len(train_df)}, total split: {len(train_dev_df) + len(train_tra_df)}\")\n",
+    "print(f\"Train rows: {len(train_tra_df)}, dev: {len(train_dev_df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "portuguese-drunk",
    "metadata": {},
    "outputs": [],
@@ -788,17 +836,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "floral-mandate",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_val_df[['target', 'all_text']].rename(columns = {'all_text': 'text'}).to_csv('./valid_formatted.csv', index=False)"
+    "train_dev_df[['target', 'all_text']].rename(columns = {'all_text': 'text'}).to_csv('./valid_formatted.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "sharp-trunk",
    "metadata": {},
    "outputs": [],
@@ -809,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "recreational-occasion",
    "metadata": {},
    "outputs": [],
@@ -819,28 +867,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "forty-visit",
+   "execution_count": 18,
+   "id": "acoustic-grant",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7613 7613 256 7357\n",
-      "3263\n"
+      "Test rows: 3263\n"
      ]
     }
    ],
    "source": [
-    "print(len(train_df), len(train_val_df) + len(train_tra_df), len(train_val_df), len(train_tra_df))\n",
-    "print(len(test_df))"
+    "print(f\"Test rows: {len(test_df)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closed-temperature",
+   "id": "retired-natural",
    "metadata": {},
    "outputs": [],
    "source": []
