First batch of multi-model results

--- a/kaggle/text-classification/data/Format Datasets.ipynb
+++ b/kaggle/text-classification/data/Format Datasets.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "indian-leather",
    "metadata": {},
    "outputs": [],
@@ -692,13 +692,13 @@
     "                               u\"\\U000024C2-\\U0001F251\"\n",
     "                               \"]+\", flags=re.UNICODE)\n",
     "    text = emoji_pattern.sub(r'EMOJI', text)\n",
-    "    return text\n",
+    "    return text if text != '' else '(empty)'\n",
     "    \n",
     "def create_text_feature(df):\n",
     "    df = df.fillna('(none)')\n",
-    "    res_column =  (df['keyword'].apply(lambda t: f\"{t}! \" if t != '(none)' else '') + df['text']) \\\n",
-    "        .apply(lambda t: clean_text(t))\n",
-    "    return res_column\n",
+    "#    res_column =  (df['keyword'].apply(lambda t: f\"{t}! \" if t != '(none)' else '') + df['text']) \\\n",
+    "#        .apply(lambda t: clean_text(t))\n",
+    "    return df['text'].apply(lambda t: clean_text(t))\n",
     "\n",
     "# I don't include location anymore - it should not have any impact on the results\n",
     "#        df['location'].apply(lambda r: f\", location {r}, \") + \\\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "hazardous-robertson",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "'ala ma kota url i pójdzie do piekła person wildfire airplane incident'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "naval-athens",
    "metadata": {},
    "outputs": [
@@ -764,15 +764,15 @@
        "12                               no don't tell me that!\n",
        "13                                            what if?!\n",
        "14                                             awesome!\n",
-       "15    ablaze! birmingham wholesale market is ablaze ...\n",
-       "16    ablaze! person will you wear shorts for race a...\n",
-       "17    ablaze! previouslyondoyintv: toke makinwaûªs ...\n",
-       "18        ablaze! check these out: url url url url nsfw\n",
-       "19    ablaze! psa: iûªm splitting my personalities....\n",
-       "dtype: object"
+       "15    birmingham wholesale market is ablaze bbc news...\n",
+       "16        person will you wear shorts for race ablaze ?\n",
+       "17    previouslyondoyintv: toke makinwaûªs marriage...\n",
+       "18                check these out: url url url url nsfw\n",
+       "19    psa: iûªm splitting my personalities. ?? tech...\n",
+       "Name: text, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "received-float",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "amateur-aerospace",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "controversial-eligibility",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "portuguese-drunk",
    "metadata": {},
    "outputs": [],
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "floral-mandate",
    "metadata": {},
    "outputs": [],
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "sharp-trunk",
    "metadata": {},
    "outputs": [],
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "recreational-occasion",
    "metadata": {},
    "outputs": [],
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "acoustic-grant",
    "metadata": {},
    "outputs": [
