Going back to dev1024 (with full training set)

--- a/kaggle/text-classification/data/Format Datasets.ipynb
+++ b/kaggle/text-classification/data/Format Datasets.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "indian-leather",
    "metadata": {},
    "outputs": [],
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "hazardous-robertson",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
        "'ala ma kota url i pójdzie do piekła person wildfire airplane incident'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "naval-athens",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "received-float",
    "metadata": {},
    "outputs": [],
@@ -795,18 +795,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "amateur-aerospace",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dev_df = train_df.sample(n=256, random_state=101)\n",
-    "train_tra_df = train_df[~train_df.isin(train_dev_df)].dropna()"
+    "train_dev_df = train_df.sample(n=1024, random_state=101)\n",
+    "#train_tra_df = train_df[~train_df.isin(train_dev_df)].dropna()\n",
+    "train_tra_df = train_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "controversial-eligibility",
    "metadata": {},
    "outputs": [
@@ -814,8 +815,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total rows: 7613, total split: 7613\n",
-      "Train rows: 7357, dev: 256\n"
+      "Total rows: 7613, total split: 8637\n",
+      "Train rows: 7613, dev: 1024\n"
      ]
     }
    ],
@@ -826,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "portuguese-drunk",
    "metadata": {},
    "outputs": [],
@@ -836,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "floral-mandate",
    "metadata": {},
    "outputs": [],
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "sharp-trunk",
    "metadata": {},
    "outputs": [],
@@ -857,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "recreational-occasion",
    "metadata": {},
    "outputs": [],
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "acoustic-grant",
    "metadata": {},
    "outputs": [
