--- a/kaggle/text-classification/Ensemble01.ipynb
+++ b/kaggle/text-classification/Ensemble01.ipynb
@@ -13,21 +13,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "auburn-medline",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#results = [\n",
+    "#    './results_04_new_preproc_multimodel/sub_a0809_distilbert-base-uncased_2e_210319_1828.csv',\n",
+    "#    './results_04_new_preproc_multimodel/sub_a0809_roberta-base_1e_210319_1740.csv',\n",
+    "#    './results_05_dev1024_multimodel/sub_a0961_bert-base-uncased_3e_v1024o_210319_2253.csv',\n",
+    "##    './results_04_new_preproc_multimodel/sub_a0797_bert-base-multilingual-uncased_1e_210319_1816.csv'\n",
+    "#]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "medical-habitat",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "results = [\n",
-    "    './results_04_new_preproc_multimodel/sub_a0809_distilbert-base-uncased_2e_210319_1828.csv',\n",
     "    './results_05_dev1024_multimodel/sub_a0961_bert-base-uncased_3e_v1024o_210319_2253.csv',\n",
-    "    './results_04_new_preproc_multimodel/sub_a0809_roberta-base_1e_210319_1740.csv'\n",
+    "    './results_05_dev1024_multimodel/sub_a0954_distilbert-base-uncased_3e_v1024o_210319_2234.csv',\n",
+    "    './results_05_dev1024_multimodel/sub_a0887_roberta-base_2e_v1024o_210319_2201.csv'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "split-carnival",
    "metadata": {},
    "outputs": [],
@@ -40,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "binding-community",
    "metadata": {},
    "outputs": [
@@ -65,7 +80,7 @@
       "1   2       1\n",
       "2   3       1\n",
       "3   9       1\n",
-      "4  11       0\n"
+      "4  11       1\n"
      ]
     }
    ],
@@ -76,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "wireless-midnight",
    "metadata": {},
    "outputs": [
@@ -144,7 +159,7 @@
        "4  11       1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "impaired-lemon",
    "metadata": {},
    "outputs": [],
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "practical-municipality",
    "metadata": {},
    "outputs": [],
@@ -176,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "relative-probe",
    "metadata": {},
    "outputs": [
@@ -241,7 +256,7 @@
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -358,7 +373,7 @@
        "1    2       1         1         1\n",
        "2    3       1         1         1\n",
        "3    9       1         1         1\n",
-       "4   11       1         1         0\n",
+       "4   11       1         1         1\n",
        "5   12       1         1         1\n",
        "6   21       0         0         0\n",
        "7   22       0         0         0\n",
@@ -376,7 +391,7 @@
        "19  60       0         0         0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "professional-cattle",
    "metadata": {},
    "outputs": [],
@@ -398,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "applicable-survey",
    "metadata": {},
    "outputs": [
@@ -468,7 +483,7 @@
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -481,10 +496,10 @@
        "1   2       1         1         1           1\n",
        "2   3       1         1         1           1\n",
        "3   9       1         1         1           1\n",
-       "4  11       1         1         0           1"
+       "4  11       1         1         1           1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,12 +510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "competent-hierarchy",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_df[['id', 'target_ens']].rename(columns={'target_ens': 'target'}).to_csv('./sub_ensemble.csv', index=False)"
+    "ensemble_df[['id', 'target_ens']].rename(columns={'target_ens': 'target'}).to_csv('./sub_ensemble_3.csv', index=False)"
    ]
   },
   {
